# rag-pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  sample.py  setup.cfg  setup.py  summarize.py
.github/workflows/: ci.yml
rag-pipeline/: __init__.py  pipeline.py  utils.py
rag_pipeline/: pipeline.py  vector_stores.py
