[metadata]
name = rag_pipeline
version = 0.1.2
author = Salim Khazem
author_email = salim.khazem@talan.com
description = A library for Retrieval-Augmented Generation with Azure OpenAI
license = MIT
url = https://github.com/salimkhazem/rag-pipeline
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    openai==1.0.0
    faiss-cpu==1.7.4
    numpy>=1.21
    pdfplumber==0.9.0
python_requires = >=3.7

